[package]
name = "ElectrexWeldingTester"
version = "0.1.0"
description = "Aplicação para testes de fim de linha com banca de carga"
authors = ["André Teles"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ewt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-dialog = "2.4.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
calamine = { version = "0.30.1", features = ["dates"] }     # read .xlsx/.xls/.ods
rust_xlsxwriter = "0.90.0"                                  # write .xlsx (pure Rust)
