[package]
name = "ElectrexWeldingTester"
version = "0.1.0"
description = "Aplicação para testes de fim de linha com banca de carga"
authors = ["André Teles"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ewt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.4", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
calamine = { version = "0.32.0", features = ["dates"] }     # read .xlsx/.xls/.ods
rust_xlsxwriter = "0.92.2"                            # write .xlsx (pure Rust)
sysinfo = "0.37.2"
serialport = "4.8.1"
tokio = { version = "1.48.0", features = ["time"] }
anyhow = "1.0.100"
regex = "1.12.2"
sha2 = "0.10.9"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "multipart",  "json", "rustls-tls"] }
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }
