[package]
name = "ElectrexWeldingTester"
version = "0.1.0"
description = "Aplicação para testes de fim de linha com banca de carga"
authors = ["André Teles"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ewt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.43", features = ["serde"] }
calamine = { version = "0.33.0", features = ["dates"] }     # read .xlsx/.xls/.ods
rust_xlsxwriter = "0.93.0"                            # write .xlsx (pure Rust)
sysinfo = "0.38.2"
serialport = "4.8.1"
tokio = { version = "1.49.0", features = ["time"] }
anyhow = "1.0.102"
regex = "1.12.3"
sha2 = "0.10.9"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "multipart",  "json"] }
zip = { version = "8.1.0", default-features = false, features = ["deflate"] }

encoding_rs = "0.8.35"
